--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
             <input type="reset">
 
         </form>
-        <a href="other.html">Privacy Notice</a>
+        <a href="privacy.html">Privacy Notice</a>
     </body>
 </html>
